--- a/src/SiteBundle/Resources/views/Default/home.html.twig
+++ b/src/SiteBundle/Resources/views/Default/home.html.twig
@@ -49,13 +49,13 @@
                     <ul class="nav navbar-nav navbar-right nav-pills" role="tablist" >
                         <li role="presentation"><a href="#">Amis en attente <span class="badge">
   {{ render(controller("AppBundle:Amis:NbreFriend")) }}</span></a></li> 
-                        <li role="presentation"><a href="#">Messages <span class="badge">3</span></a></li> 
+                        <li role="presentation"><a href="#">Messages</a></li> 
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{app.user}}<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="{{path('fos_user_profile_show')}}">Mon compte</a></li>
-                                <li><a href="#">XXXXX</a></li>
-                                <li><a href="#">XXXXX</a></li>
+                             {#   <li><a href="#">XXXXX</a></li>
+                                <li><a href="#">XXXXX</a></li>#}
                                 <li class="divider"></li>
                                 <li><a href="{{path('fos_user_security_logout')}}">Déconnexion</a></li>
                             </ul>
@@ -73,9 +73,7 @@
                                 Tous mes films
                             </a>
                             <a href="{{path('Filmotheque_All_Wishlist')}}" class="list-group-item">Ma liste de souhait</a>
-                            <a href="#" class="list-group-item">Morbi leo risus</a>
-                            <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-                            <a href="#" class="list-group-item">Vestibulum at eros</a>
+           
                         </div> 
                     {% endblock menu %}
                 </div>
